# sputnik-dao-contract

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  dao-code-v2.wasm  dao_data_model.md  python-script.py  release_process.md  user_data_model.md
.cargo/: config  config.toml
.devcontainer/: devcontainer.json  install-dependencies.sh
.github/workflows/: build.yml  tests.yml
astra/: ABI.md  Cargo.toml  TestPlan.md  bounty-test.sh  build.sh  test.bat
astra-factory/: Cargo.toml  README.md  build.sh
astra-factory/src/: lib.rs
astra-staking/: Cargo.toml  README.md  build.sh
astra-staking/src/: lib.rs  user.rs
astra/res/: sputnikdao2.wasm  test_token.wasm
astra/src/: policy.rs  types.rs  upgrade.rs
astra/tests/: test_general.rs  test_upgrade.rs
astra/tests-ava/: ava.config.cjs  package.json
astra/tests-ava/__tests__/: delegation.ava.ts  lib.ava.ts  policy.ava.ts  proposals.ava.ts  upgrade.ava.ts  utils.ts  views.ava.ts
astra/tests/utils/: mod.rs
custom-utils/: Cargo.toml  build.sh
custom-utils/src/: lib.rs
near_cli/: Cargo.toml
near_cli/src/: consts.rs  fns.rs  impls.rs  lib.rs  structs.rs  traits.rs
res/: .gitignore
scripts/: deploy_factory_dev.sh  deploy_factory_gasfix_testnet.sh  deploy_factory_mainnet.sh  deploy_factory_testnet.sh  token_staking_v2_testnet.sh  token_staking_v3_testnet.sh  upgrade_cache_flow_dev.sh  upgrade_dao_dev.sh  upgrade_dao_direct_dev.sh  upgrade_dao_direct_testnet.sh  upgrade_dao_proposal_dev.sh  upgrade_dao_proposal_mainnet.sh  upgrade_dao_proposal_testnet.sh  upgrade_fa_dao_direct_mainnet.sh  upgrade_fa_dao_direct_testnet.sh  upgrade_factory_from_dao.sh  upgrade_factory_mainnet.sh  upgrade_factory_testnet.sh
sputnik-staking/: Cargo.toml  README.md  build.sh
sputnik-staking/res/: sputnik_staking.wasm
sputnik-staking/src/: lib.rs  storage_impl.rs  user.rs
sputnikdao/: Cargo.toml  build.sh
sputnikdao-factory/: Cargo.toml  README.md  build.sh
sputnikdao-factory/res/: sputnikdao_factory.wasm
sputnikdao-factory/src/: lib.rs
sputnikdao-factory2/: Cargo.toml  README.md  build.sh  build_docker.sh
sputnikdao-factory2/res/: sputnikdao_factory.wasm  sputnikdao_factory2.wasm  sputnikdao_factory2_v_2_0.wasm
sputnikdao-factory2/src/: factory_manager.rs  lib.rs
sputnikdao-factory2/src/tests/: test_daos_creation.rs
sputnikdao-factory2/src/tests/utils/: mod.rs
sputnikdao-factory2/test/: test_basics.rs
sputnikdao-factory2/tests/: test_basics.rs  test_daos_creation.rs  test_global_contract.rs  test_init_and_default.rs  test_upgrade.rs
sputnikdao-factory2/tests/utils/: mod.rs
sputnikdao-upgrade-cache/: Cargo.toml  README.md  build.sh
sputnikdao-upgrade-cache/res/: sputnikdao_upgrade_cache.wasm
sputnikdao-upgrade-cache/src/: lib.rs
sputnikdao/res/: sputnikdao.wasm
sputnikdao/src/: bounty.rs  lib.rs
sputnikdao2/: ABI.md  Cargo.toml  README.md  TestPlan.md  bounty-test.sh  build.sh  build_docker.sh  package-lock.json  test.bat  test.sh
sputnikdao2-gasfix/: Cargo.toml  README.md  build.sh  build_docker.sh
sputnikdao2-gasfix/res/: sputnikdao2_gasfix.wasm
sputnikdao2-gasfix/src/: bounties.rs  lib.rs  proposals.rs  types.rs
sputnikdao2-gasfix/tests/: test_upgrade.rs
sputnikdao2-gasfix/tests/utils/: mod.rs
sputnikdao2/near-workspaces/: package-lock.json
sputnikdao2/near-workspaces/__tests__/: bounties.ava.ts  delegation.ava.ts  delegation.ts  policy.ava.ts  proposals.ava.ts  utils.ts
sputnikdao2/res/: ref_exchange_release.wasm  sputnikdao.wasm  sputnikdao2.wasm  sputnikdao2_v_3_0.wasm
sputnikdao2/src/: action_log.rs  basic_action.rs  bounties.rs  delegation.rs  ext_fungible_token.rs  legacy.rs  legacy_account.rs  lib.rs  policy.rs  proposals.rs  storage_impl.rs  token.rs  types.rs  upgrade.rs  user.rs  views.rs
sputnikdao2/tests/: test_bounties.rs  test_delegation.rs  test_general.rs  test_nft.rs  test_proposals.rs  test_quit.rs  test_skip_init.rs  test_upgrade.rs  test_views.rs
sputnikdao2/tests-ava/: README.md  ava.config.cjs  ava.testnet.config.cjs  package.json  tsconfig.json
sputnikdao2/tests-ava/__tests__/: bounties.ava.ts  delegation.ava.ts  lib.ava.ts  policy.ava.ts  proposals.ava.ts  skip-init.ava.ts  tests.ava.ts  upgrade.ava.ts  utils.ts  views.ava.ts
sputnikdao2/tests/utils/: mod.rs
test-nft/: Cargo.toml  build.sh
test-nft/src/: lib.rs
test-token/: Cargo.toml  build.sh
test-token/res/: test_token.wasm
test-token/src/: lib.rs
workspaces-rs-tests/: Cargo.toml  README.md  build.sh
workspaces-rs-tests/tests/: test_sputnikdao_factory.rs
