[workspace]
members = [
  "astra-staking",
  "astra",
  "astra-factory",
  "test-token"
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/near-ndc/astra"
authors = [
    "Astra Devs <near-daos@protonmail.com>",
    "NDC GWG (https://near.social/#/mob.near/widget/ProfilePage?accountId=govworkinggroup.near)",
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
