[workspace]
# include a member for each contract
members = [
  "sputnik-staking",
  "sputnikdao2",
  "sputnikdao-factory2",
  "test-token"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
