[package]
name = "astra-factory"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.4", features = ["unstable"]  }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
