[package]
name = "astra-staking"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
near-contract-standards = "4.0.0-pre.4"
hex = "0.4.2"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
test-token = { path = "../test-token" }
