[package]
name = "sputnik-staking"
version = "1.0.0"
authors = ["Sputnik Devs <near-daos@protonmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {path="/home/gentbinaku/near/near-sdk-rs/near-sdk"}
near-sys = {path="/home/gentbinaku/near/near-sdk-rs/sys"}
near-contract-standards = {path="/home/gentbinaku/near/near-sdk-rs/near-contract-standards"}
hex = "0.4.2"

[dev-dependencies]
near-sdk-sim = {path="/home/gentbinaku/near/near-sdk-rs/near-sdk-sim"}
test-token = { path = "../test-token" }
