[package]
name = "sputnik-staking"
version = "1.0.0"
authors = ["Sputnik Devs <near-daos@protonmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.9.0"
near-contract-standards = "5.9.0"
hex = "0.4.3"

[dev-dependencies]
near-workspaces = "0.17.0"
test-token = { path = "../test-token" }
