[package]
name = "sputnikdao-factory"
version = "0.1.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/ctindogaru/near-sdk-rs", branch = "allow_deserialization" }
