[package]
name = "sputnikdao-factory2"
version = "0.2.1"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.9.0"
near-contract-standards = "5.9.0"

[dev-dependencies]
near-workspaces = "0.17.0"
tokio = { version = "1.44.0", features = ["full"] }
near-sdk = {version="5.9.0", features = ["unit-testing"] }
