[package]
name = "sputnikdao"
version = "0.1.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "703a37db70d198d4b37fa248ebe75ddfa2ebd6a2" }
near-std = { git = "https://github.com/near/near-sdk-rs", rev = "703a37db70d198d4b37fa248ebe75ddfa2ebd6a2" }
