[package]
name = "sputnikdao2"
version = "2.3.1"
authors = ["Sputnik Devs <near-daos@protonmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-contract-standards = "4.0.0-pre.4"
hex = "0.4.2"

[dependencies.serde_with]
version = "1.4.0"

[dev-dependencies]
test-token = { path = "../test-token" }
sputnik-staking = { path = "../sputnik-staking" }
sputnikdao-factory2 = { path = "../sputnikdao-factory2" }
