[package]
name = "sputnikdao2"
version = "2.3.1"
authors = ["Sputnik Devs <near-daos@protonmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.9.0"
near-contract-standards = "5.9.0"
hex = "0.4.3"

[dependencies.serde_with]
version = "1.4.0"

[dev-dependencies]
near-workspaces = "0.17.0"
test-token = { path = "../test-token" }
sputnik-staking = { path = "../sputnik-staking" }
sputnikdao-factory2 = { path = "../sputnikdao-factory2" }
tokio = { version = "1.44.0", features = ["full"] }
