[package]
name = "sputnikdao2"
version = "2.3.1"
authors = ["Sputnik Devs <near-daos@protonmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/near-daos/sputnik-dao-contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.9.0"
near-contract-standards = "5.9.0"
hex = "0.4.3"

[dependencies.serde_with]
version = "1.4.0"

[dev-dependencies]
near-workspaces = "0.17.0"
test-token = { path = "../test-token" }
sputnik-staking = { path = "../sputnik-staking" }
sputnikdao-factory2 = { path = "../sputnikdao-factory2" }
tokio = { version = "1.44.0", features = ["full"] }

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.13.1-rust-1.83.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:cc80ff2f2a42823ffd991eaf45ea9fada71ee206d79561eea4f40ecc27bff1be"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

