[package]
name = "test-token"
version = "0.1.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
near-sdk = {path="/home/gentbinaku/near/near-sdk-rs/near-sdk"}
near-sys = {path="/home/gentbinaku/near/near-sdk-rs/sys"}
near-contract-standards = {path="/home/gentbinaku/near/near-sdk-rs/near-contract-standards"}