[package]
name = "workspaces-rs-tests"
version = "0.1.0"
authors = ["Nemanja Ninkovic <nninkovic.py@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.4", features = ["unstable"]  }
near-sdk-sim = "4.0.0-pre.4"
workspaces = "0.7.0"
anyhow = "1.0"
tokio = "1.23.0"
near-primitives = "0.5.0"
near-units = "0.2.0"
serde_json = "1.0"
sputnikdao2 = { path = "../sputnikdao2" }
